--- a/casepilot-ui/P-SOLUTION_GENERATOR.html
+++ b/casepilot-ui/P-SOLUTION_GENERATOR.html
@@ -11,7 +11,6 @@
   <script src="https://unpkg.byted-static.com/fortawesome/fontawesome-free/6.7.2/js/all.min.js" data-auto-replace-svg="nest"></script>
 </head>
 <body class="bg-bg-primary min-h-screen cp-grid-bg">
-  <!-- Top Nav -->
   <header class="sticky top-0 z-50 bg-white/85 backdrop-blur border-b border-border-light">
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
       <a href="P-HOME.html" class="flex items-center gap-3">
@@ -20,7 +19,7 @@
         </div>
         <div class="leading-tight">
           <div class="text-lg font-extrabold gradient-text">CasePilot</div>
-          <div class="text-xs text-text-secondary">协作生成 · 交付级方案包</div>
+          <div class="text-xs text-text-secondary">协作生成 · 交付级方案书</div>
         </div>
       </a>
 
@@ -60,101 +59,149 @@
         </div>
       </div>
 
-      <div class="flex items-center gap-3">
-        <span class="cp-kbd">Ctrl</span><span class="cp-kbd">Enter</span>
-        <span class="text-xs text-text-secondary">发送</span>
+      <div class="flex items-center gap-2">
+        <button id="cp-generate-draft" class="px-4 py-2 rounded-xl border border-border-light bg-white hover:bg-bg-secondary text-sm">
+          生成初版
+        </button>
+        <button id="cp-open-chat" class="px-4 py-2 rounded-xl bg-gradient-primary text-white shadow-card-hover text-sm">
+          协作
+        </button>
       </div>
     </div>
 
     <section class="mt-6 grid lg:grid-cols-12 gap-6">
-      <!-- Left: continuous chat -->
-      <div class="lg:col-span-5">
-        <div class="cp-card shadow-card p-5">
-          <div class="flex items-center justify-between">
-            <div class="font-bold">对话</div>
-            <a class="text-sm text-text-secondary hover:text-primary" href="P-SOLUTION_PROGRESS.html">生成中页</a>
-          </div>
-          <div class="mt-4 cp-chat max-h-[520px] overflow-auto pr-1" id="cp-chat"></div>
-
-          <div class="mt-4 cp-divider"></div>
-
-          <div class="mt-4 flex items-end gap-3">
-            <textarea id="cp-input" rows="3" class="flex-1 px-4 py-3 rounded-xl border border-border-light search-focus resize-none" placeholder="一句话需求：例如『做一个售后知识问答助手，必须可验收，可追溯』"></textarea>
-            <button id="cp-send" class="px-4 py-3 rounded-xl bg-gradient-primary text-white shadow-card-hover">
-              发送
-            </button>
-          </div>
-        </div>
-      </div>
-
-      <!-- Middle: Notion-like checklist / confirmations -->
-      <div class="lg:col-span-3">
-        <div class="cp-card shadow-card p-5">
-          <div class="flex items-center justify-between">
-            <div class="font-bold">确认清单</div>
-            <span class="text-xs cp-pill px-2 py-1 rounded-full">拖不动（演示）</span>
-          </div>
-          <div class="mt-4 grid gap-3" id="cp-todos"></div>
-
-          <div class="mt-4">
-            <button id="cp-generate" class="w-full inline-flex items-center justify-center gap-2 px-5 py-3 rounded-xl bg-gradient-primary text-white shadow-card-hover disabled:opacity-50 disabled:cursor-not-allowed" type="button">
-              <i class="fas fa-bolt"></i>
-              生成方案包
-            </button>
-            <div class="mt-2 text-xs text-text-secondary">完成清单后可生成（演示）。</div>
-          </div>
-        </div>
-
-        <div class="mt-6 cp-card shadow-card p-5">
-          <div class="font-bold">最近</div>
-          <div class="mt-3 grid gap-3" data-history></div>
-        </div>
-      </div>
-
-      <!-- Right: artifacts (minimal text, block style) -->
-      <div class="lg:col-span-4">
-        <div class="cp-card shadow-card p-5">
-          <div class="flex items-center justify-between">
-            <div class="font-bold">方案包骨架</div>
-            <span class="text-xs cp-pill px-2 py-1 rounded-full">实时填充</span>
-          </div>
-
-          <div class="mt-4 grid gap-6">
-            <div>
-              <div class="flex items-center justify-between">
-                <div class="text-sm font-semibold">证据（可追溯）</div>
-                <span class="text-xs cp-pill px-2 py-1 rounded-full">来源</span>
-              </div>
-              <div class="mt-2 grid gap-2" id="cp-evidence"></div>
+      <!-- Main: document (large) -->
+      <div class="lg:col-span-8">
+        <div class="cp-card shadow-card p-6 sm:p-8">
+          <div class="flex items-center justify-between gap-4">
+            <div class="font-bold">方案书（可编辑）</div>
+            <div class="flex items-center gap-2 text-xs">
+              <span class="cp-kbd">点击文本即可编辑</span>
+              <a class="text-text-secondary hover:text-primary" href="P-SOLUTION_DETAIL.html">预览</a>
             </div>
+          </div>
 
-            <div>
+          <div class="mt-5 grid gap-5">
+            <section class="cp-card p-5">
               <div class="flex items-center justify-between">
-                <div class="text-sm font-semibold">指标（可验收）</div>
-                <span class="text-xs cp-pill-warn px-2 py-1 rounded-full">口径</span>
+                <div class="font-semibold">概述</div>
+                <span class="text-xs cp-pill px-2 py-1 rounded-full">摘要</span>
               </div>
-              <div class="mt-2 grid gap-2" id="cp-metrics"></div>
-            </div>
+              <div id="cp-doc-overview" class="mt-3 text-sm leading-relaxed" contenteditable="true" data-doc="overview"></div>
+            </section>
 
-            <div>
+            <section class="cp-card p-5">
               <div class="flex items-center justify-between">
-                <div class="text-sm font-semibold">边界（不适用）</div>
-                <span class="text-xs cp-pill-primary px-2 py-1 rounded-full">护栏</span>
+                <div class="font-semibold">系统架构</div>
+                <span class="text-xs cp-pill px-2 py-1 rounded-full">可落地</span>
               </div>
-              <div class="mt-2 grid gap-2" id="cp-boundaries"></div>
-            </div>
+              <div id="cp-doc-arch" class="mt-3 text-sm leading-relaxed" contenteditable="true" data-doc="arch"></div>
+            </section>
 
-            <div>
+            <section class="cp-card p-5">
               <div class="flex items-center justify-between">
-                <div class="text-sm font-semibold">交付物</div>
+                <div class="font-semibold">验收指标与口径</div>
+                <span class="text-xs cp-pill-warn px-2 py-1 rounded-full">可验收</span>
+              </div>
+              <div id="cp-doc-metrics" class="mt-3 text-sm leading-relaxed" contenteditable="true" data-doc="metrics"></div>
+            </section>
+
+            <section class="cp-card p-5">
+              <div class="flex items-center justify-between">
+                <div class="font-semibold">风险边界与护栏</div>
+                <span class="text-xs cp-pill-primary px-2 py-1 rounded-full">边界</span>
+              </div>
+              <div id="cp-doc-boundaries" class="mt-3 text-sm leading-relaxed" contenteditable="true" data-doc="boundaries"></div>
+            </section>
+
+            <section class="cp-card p-5">
+              <div class="flex items-center justify-between">
+                <div class="font-semibold">交付物清单</div>
                 <span class="text-xs cp-pill px-2 py-1 rounded-full">输出</span>
               </div>
-              <div class="mt-2 grid gap-2" id="cp-deliverables"></div>
-            </div>
+              <div id="cp-doc-deliverables" class="mt-3 text-sm leading-relaxed" contenteditable="true" data-doc="deliverables"></div>
+            </section>
           </div>
         </div>
       </div>
+
+      <!-- Side: chat + checklist + evidence (sticky) -->
+      <aside class="lg:col-span-4">
+        <div class="cp-card shadow-card p-5 lg:sticky lg:top-20">
+          <div class="flex items-center justify-between">
+            <div class="font-bold">协作</div>
+            <div class="flex items-center gap-2 text-xs">
+              <span class="cp-kbd">Ctrl</span><span class="cp-kbd">Enter</span>
+            </div>
+          </div>
+
+          <div class="mt-4">
+            <div class="flex items-center gap-2">
+              <button class="px-3 py-2 rounded-xl text-sm nav-link-active" data-pane-tab="chat" type="button">对话</button>
+              <button class="px-3 py-2 rounded-xl text-sm text-text-secondary hover:bg-bg-secondary" data-pane-tab="todo" type="button">清单</button>
+              <button class="px-3 py-2 rounded-xl text-sm text-text-secondary hover:bg-bg-secondary" data-pane-tab="evidence" type="button">证据</button>
+            </div>
+
+            <!-- chat -->
+            <div class="mt-4" data-pane="chat">
+              <div class="cp-chat max-h-[360px] overflow-auto pr-1" id="cp-chat"></div>
+              <div class="mt-4 flex items-end gap-3">
+                <textarea id="cp-input" rows="3" class="flex-1 px-4 py-3 rounded-xl border border-border-light search-focus resize-none" placeholder="输入需求或修改点…"></textarea>
+                <button id="cp-send" class="px-4 py-3 rounded-xl bg-gradient-primary text-white shadow-card-hover">发送</button>
+              </div>
+            </div>
+
+            <!-- todo -->
+            <div class="mt-4 hidden" data-pane="todo">
+              <div class="grid gap-3" id="cp-todos"></div>
+              <div class="mt-4">
+                <button id="cp-generate" class="w-full inline-flex items-center justify-center gap-2 px-5 py-3 rounded-xl bg-gradient-primary text-white shadow-card-hover disabled:opacity-50 disabled:cursor-not-allowed" type="button">
+                  <i class="fas fa-bolt"></i>
+                  生成方案包
+                </button>
+              </div>
+            </div>
+
+            <!-- evidence -->
+            <div class="mt-4 hidden" data-pane="evidence">
+              <div class="grid gap-3" id="cp-evidence"></div>
+            </div>
+          </div>
+
+          <div class="mt-5 cp-divider"></div>
+
+          <div class="mt-4 grid gap-3">
+            <div class="flex items-center justify-between">
+              <div class="text-sm font-semibold">指标</div>
+              <span class="text-xs cp-pill-warn px-2 py-1 rounded-full">口径</span>
+            </div>
+            <div class="grid gap-2" id="cp-metrics"></div>
+            <div class="flex items-center justify-between mt-2">
+              <div class="text-sm font-semibold">边界</div>
+              <span class="text-xs cp-pill-primary px-2 py-1 rounded-full">护栏</span>
+            </div>
+            <div class="grid gap-2" id="cp-boundaries"></div>
+          </div>
+        </div>
+      </aside>
     </section>
+
+    <script>
+      // side pane tabs (tiny)
+      document.addEventListener('click', (e)=>{
+        const btn = e.target.closest('[data-pane-tab]');
+        if(!btn) return;
+        const tab = btn.getAttribute('data-pane-tab');
+        document.querySelectorAll('[data-pane-tab]').forEach(b=>{
+          const active = b.getAttribute('data-pane-tab')===tab;
+          b.classList.toggle('nav-link-active', active);
+          b.classList.toggle('text-text-secondary', !active);
+        });
+        document.querySelectorAll('[data-pane]').forEach(p=>{
+          p.classList.toggle('hidden', p.getAttribute('data-pane')!==tab);
+        });
+      });
+    </script>
   </main>
 
   <footer class="border-t border-border-light bg-white/70">
